syntax = "proto3";

package runtime.api.config.middleware.metrics.v1;

option go_package = "github.com/origadmin/runtime/api/gen/go/config/middleware/metrics/v1;metricsv1";






message UserMetric {
  // Timestamp: indicates the time of indicator data
  int64 timestamp = 1;
  // Indicator name
  string name = 2;
  // Indicator value
  double value = 3;
  // Indicator label for classification or filtering
  map<string, string> labels = 4;
  // Indicator unit
  string unit = 5;
  // Type of indicator (e.g. counter, timer, histogram, etc.)
  enum MetricType {
    METRIC_TYPE_UNSPECIFIED = 0;
    METRIC_TYPE_COUNTER = 1;
    METRIC_TYPE_GAUGE = 2;
    METRIC_TYPE_HISTOGRAM = 3;
    METRIC_TYPE_SUMMARY = 4;
  }
  MetricType type = 6;
  // Description of indicators
  string description = 7;
  // Indicator context information
  string context = 8;
  // Additional information for metrics that can be used to store arbitrary metadata
  map<string, string> metadata = 9;
}

// Metrics
message Metrics {
  // System-generated timestamp for the metrics report
  // int64 report_timestamp = 1 [json_name = "report_timestamp"];
  // System-generated unique identifier for the metrics report
  // string report_id = 2 [json_name = "report_id"];
  // System-generated status code indicating the success or failure of the metrics collection
  // int32 status_code = 3 [json_name = "status_code"];
  // System-generated message providing additional context about the metrics collection
  // string status_message = 4 [json_name = "status_message"];

  // Add a list of supported metrics for enabling or disabling specific metrics
  repeated string supported_metrics = 5 [json_name = "supported_metrics"];
  // Repeated field for user-defined metrics
  repeated UserMetric user_metrics = 6 [json_name = "user_metrics"];
}
