syntax = "proto3";

package config.v1;

import "google/protobuf/duration.proto";

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/gen/go/config/v1;configv1";
option java_multiple_files = true;
option java_outer_classname = "SecurityProto";
option java_package = "com.github.origadmin.runtime.config.v1";
option objc_class_prefix = "ORC";

// Security middleware config.
message Security {

  // Casbin middleware config
  message Casbin {
    // Disable middleware
    bool disabled = 1 [json_name = "disabled"];
    // Direct release paths
    repeated string direct_release_paths = 2 [json_name = "direct_release_paths"];
    // Policy file
    string policy_file = 3 [json_name = "policy_file"];
    // Model file
    string model_file = 4 [json_name = "model_file"];
  }

  // Authorization middleware config
  message JSONWebToken {
    // Disable middleware
    bool disabled = 1 [json_name = "disabled"];
    // Direct release paths
    repeated string direct_release_paths = 2 [json_name = "direct_release_paths"];
    // Signing method
    string signing_method = 3 [json_name = "signing_method"];
    // Signing key
    string signing_key = 4 [json_name = "signing_key"];
    // Old signing key
    string old_signing_key = 5 [json_name = "old_signing_key"];
    // Token expiration time
    google.protobuf.Duration expire_time = 6 [json_name = "expire_time"];
    // Token refresh time
    google.protobuf.Duration refresh_time = 7 [json_name = "refresh_time"];
    // Cache config name from cache service
    string cache_name = 8 [json_name = "cache_name"];
  }

  // Direct release paths
  repeated string direct_release_paths = 1 [json_name = "direct_release_paths"];
  // JWT config for authorization
  JSONWebToken jwt = 10 [json_name = "jwt"];
  // Casbin config for authorization
  Casbin casbin = 11 [json_name = "casbin"];
}