syntax = "proto3";

package config.v1;

import "config/v1/message.proto";
import "config/v1/middleware.proto";
import "config/v1/task.proto";
import "config/v1/websocket.proto";
import "google/protobuf/duration.proto";

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/gen/go/config/v1;configv1";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.github.origadmin.runtime.config.v1";
option objc_class_prefix = "ORC";

message Service {

  // GINS
  message GINS {
    string network = 1 [json_name = "network"];
    string addr = 2 [json_name = "addr"];
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    optional google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    optional google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    optional google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    optional google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    optional google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
    string endpoint = 11 [json_name = "endpoint"];
  }

  // HTTP
  message HTTP {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
    string endpoint = 11 [json_name = "endpoint"];
  }

  // GRPC
  message GRPC {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    optional google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    optional google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    optional google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    optional google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    optional google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
    string endpoint = 11 [json_name = "endpoint"];
  }

  // Selector
  message Selector {
    string version = 1;
    string builder = 2;
  }

  // Service name for service discovery
  string name = 1 [json_name = "name"];
  bool dynamic_endpoint = 2 [json_name = "dynamic_endpoint"];

  GRPC grpc = 10 [json_name = "grpc"];
  HTTP http = 20 [json_name = "http"];
  GINS gins = 30 [json_name = "gins"];

  config.v1.WebSocket websocket = 100 [json_name = "websocket"];
  config.v1.Message message = 200 [json_name = "message"];
  config.v1.Task task = 300 [json_name = "task"];

  config.v1.Middleware middleware = 400 [json_name = "middleware"];
  Selector selector = 500 [json_name = "selector"];

  string host = 99 [json_name = "host"];
}